--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
 
 #main-header {
     grid-area: header;
-    background-color: #00AC9F;
-    color: black;
+    background-color: #003087;
+    color: white;
     margin: 5px;
 }
 
@@ -52,7 +52,7 @@
 
 /* Stream Container */
 .main-area {
-    background-color: #00AC9F;
+    background-color: #003087;
     margin: 5px;
 }
 
@@ -62,7 +62,7 @@
 #count {
     margin-bottom: 10px;
     float: left !important;
-    color: black;
+    color: white;
 }
 
 #page {
@@ -71,18 +71,18 @@
 }
 
 #current-page {
-    color: black;
+    color: white;
 }
 
 #left-triangle {
-    border-right-color: black;
+    border-right-color: white;
     border-left-color: transparent;
     margin-right: 5px;
     
 }
 #right-triangle {
     border-right-color: transparent;
-    border-left-color: black;
+    border-left-color: white;
     margin-left: 5px;
 }
 
@@ -90,7 +90,7 @@
     color: white;
     width: 0px;
     height: 0px;
-    border: 10px solid black;
+    border: 10px solid white;
     border-top-color: transparent;
     border-bottom-color: transparent;
 }
@@ -98,6 +98,7 @@
 /* Individual Stream */
 .stream-content {
     background-color: white;
+    color: black;
     border-radius: 5px;
     margin: 10px;
     height: 200px;
@@ -114,6 +115,15 @@
     font-weight: bold;
     font-size: xx-large;
     margin-bottom: 10px;
+}
+
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #F3C300; 
 }
 
 .preview-image {
